--- a/front/public/index.html
+++ b/front/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <style>
-      @import url("https://fonts.googleapis.com/css?family=Mitr:400");
+      @import url("https://fonts.googleapis.com/css?family=Montserrat:700");
     </style>
     <style>
       @import url("https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css");
